--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -12,7 +12,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.clevercloud</groupId>
+      <groupId>com.clever-cloud</groupId>
       <artifactId>biscuit-java</artifactId>
     </dependency>
     <dependency>
@@ -116,9 +116,9 @@
               <mainClass>fr.jetoile.hadoopunit.component.PulsarBootstrap</mainClass>
               <properties>
                 <pulsar.extraClasspath>com.clevercloud:biscuit-pulsar:1.0-SNAPSHOT</pulsar.extraClasspath>
-                <pulsar.authentication.enabled>true</pulsar.authentication.enabled>
+                <pulsar.authentication.enabled>false</pulsar.authentication.enabled>
                 <pulsar.authentication.provider>com.clevercloud.biscuitpulsar.AuthenticationProviderBiscuit</pulsar.authentication.provider>
-                <pulsar.authorization.enabled>true</pulsar.authorization.enabled>
+                <pulsar.authorization.enabled>false</pulsar.authorization.enabled>
                 <pulsar.authorization.provider>com.clevercloud.biscuitpulsar.AuthorizationProviderBiscuit</pulsar.authorization.provider>
                 <pulsar.extra.conf>biscuitRootKey=3A8621F1847F19D6DAEAB5465CE8D3908B91C66FB9AF380D508FCF9253458907</pulsar.extra.conf>
                 <pulsar.worker.enabled>false</pulsar.worker.enabled>
