--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,34 @@
     <slf4j-api.version>1.7.29</slf4j-api.version>
   </properties>
 
+  <licenses>
+    <license>
+      <name>The Apache License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>Alexandre DUVAL</name>
+      <email>alexandre.duval@clever-cloud.com</email>
+      <organization>Clever Cloud</organization>
+      <organizationUrl>https://clever-cloud.com</organizationUrl>
+    </developer>
+    <developer>
+      <name>Geoffroy COUPRIE</name>
+      <email>geoffroy.couprie@clever-cloud.com</email>
+      <organization>Clever Cloud</organization>
+      <organizationUrl>https://clever-cloud.com</organizationUrl>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:https://git@github.com/clevercloud/biscuit-pulsar.git</connection>
+    <developerConnection>scm:git:git@github.com:clevercloud/biscuit-pulsar.git</developerConnection>
+    <url>git@github.com:clevercloud/biscuit-pulsar.git</url>
+  </scm>
+
   <repositories>
     <repository>
       <id>oss-sonatype</id>
