--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -3,9 +3,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.clevercloud</groupId>
-    <artifactId>biscuit-pulsar-parent</artifactId>
-    <version>1.1.6</version>
+    <groupId>com.clever-cloud</groupId>
+    <artifactId>biscuit-pulsar</artifactId>
+    <version>1.1.7</version>
   </parent>
 
   <artifactId>integration-test</artifactId>
