Revert "packaging to jar"
This reverts commit f482a7b47c7b87b63a071280ead14635cfc15351.

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.clever-cloud</groupId>
   <artifactId>biscuit-pulsar-parent</artifactId>
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
   <name>biscuit-pulsar</name>
   <version>1.1.9</version>
   <url>https://github.com/clevercloud/biscuit-pulsar</url>
