--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
 
     <logback-classic.version>1.2.3</logback-classic.version>
     <biscuit-java.version>0.2.7</biscuit-java.version>
-    <pulsar-broker.version>2.6.0-SNAPSHOT</pulsar-broker.version>
+    <pulsar-broker.version>2.6.0</pulsar-broker.version>
     <grpc.version>1.18.0</grpc.version>
     <vavr.version>0.10.2</vavr.version>
 
