--- a/biscuit-pulsar/pom.xml
+++ b/biscuit-pulsar/pom.xml
@@ -43,5 +43,17 @@
       <groupId>com.clever-cloud</groupId>
       <artifactId>biscuit-java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.inject</groupId>
+      <artifactId>jersey-hk2</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+    </dependency>
   </dependencies>
 </project>
